handle over on mouse follow comp

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "src/common/_variables.scss";
+@import "./reset";
+
+body,
+html {
+  background:$body-color;
+  height:100%;
+  font-family: "Roboto";
+}
