add animations to mouse-follow, and create submodule to it

--- a/src/app/utilities/mouse-follow/mouse-follow.component.html
+++ b/src/app/utilities/mouse-follow/mouse-follow.component.html
@@ -3,5 +3,8 @@
   'width.px':sizeElem,
   'top.px':topElem,
   'left.px':leftElem
-}">
+}" [ngClass]="{
+  'isHovSmtg' : isHovSmtg,
+  'isOutSmtg' : !isHovSmtg,
+  'outOfBounds' : isOutOfBounds() }">
 </div>
