add first routing

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -6,7 +6,7 @@
     </h2>
   </div>
 
-    <a mfHover class="button-scroll">
+    <a routerLink="/artworks" mfHover class="button-scroll">
       Click to show
     </a>
 </div>
