create art menu - add a follow mouse component test

--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container-title">
     <h1>Simon Delineau</h1>
-    <h2>
+    <h2 mfHover>
       Webfolio - Graphisme
     </h2>
   </div>
