add first animations test

--- a/src/app/main/home/home.component.scss
+++ b/src/app/main/home/home.component.scss
@@ -31,4 +31,12 @@
       opacity:1;
     }
   }
+
+  .link-anim-test {
+    position:absolute;
+    top:20px;
+    right:20px;
+    color:white;
+    text-decoration: none;
+  }
 }
