--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
+<div [@routeAnimations]="prepareRoute(outlet)" style="width:100%; height:100%;">
+  <router-outlet #outlet="outlet"></router-outlet>
+</div>
 <circle-mouse-follow [size]=50></circle-mouse-follow>
