--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <a routerLink="/anim-test" class="link-anim-test">TEST</a>
   <div class="container-title">
     <h1>Simon Delineau</h1>
     <h2 mfHover>
@@ -6,7 +7,7 @@
     </h2>
   </div>
 
-    <a routerLink="/artworks" mfHover class="button-scroll">
-      Click to show
-    </a>
+  <a routerLink="/artworks" mfHover class="button-scroll">
+    Click to show
+  </a>
 </div>
