--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div [@routeAnimations]="prepareRoute(outlet)" style="width:100%; height:100%;">
+  <app-main-menu></app-main-menu>
   <router-outlet #outlet="outlet"></router-outlet>
 </div>
 <circle-mouse-follow [size]=50></circle-mouse-follow>
