--- a/src/app/main/navigation/main-menu/main-menu.component.html
+++ b/src/app/main/navigation/main-menu/main-menu.component.html
@@ -1,1 +1,15 @@
-<p>main-menu works!</p>
+<div id="main_menu" *ngIf="menuShow" @slide >
+
+</div>
+<div @opacity id="layer" *ngIf="menuShow" (click)="toggle()">
+</div>
+<div class="bar-menu">
+  <a mfHover routerLink="/">Home</a>
+  <div @opacity class="icons" id="open" *ngIf="!menuShow" (click)="toggle()" mfHover>
+    <img src="assets/icons/hamburger.svg"/>
+  </div>
+  <div @opacity class="icons" id="close" *ngIf="menuShow" (click)="toggle()" mfHover>
+    <img src="assets/icons/cross.svg"/>
+  </div>
+  <div class="hover-button"></div>
+</div>
