--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <a routerLink="/anim-test" class="link-anim-test">TEST</a>
+  <!-- <a routerLink="/anim-test" class="link-anim-test">TEST</a> -->
   <div class="container-title">
     <h1>Simon Delineau</h1>
-    <h2 mfHover>
+    <h2>
       Webfolio - Graphisme
     </h2>
   </div>
