--- a/src/app/main/navigation/art-menu/art-menu.component.scss
+++ b/src/app/main/navigation/art-menu/art-menu.component.scss
@@ -11,8 +11,18 @@ $transition-duration: .2s;
     flex-direction: column;
     width:335px;
     height:100%;
+    overflow:auto;
+
+    /* Hide Scrollbar */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    &::-webkit-scrollbar { /* Chrome, Safari and Opera */
+      display:none;
+    }
+    
     > .item-menu {
       flex:1;
+      min-height:calc(100vh/6);
       display:flex;
       align-items: center;
       justify-content: center;
