--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,9 @@ html {
   height:100%;
   font-family: "Roboto";
   overflow-x:hidden;
+  * {
+    box-sizing: border-box;
+  }
 }
 a[href] {
   text-decoration:none;
