create shadow-hover directive and push the hover behavior when we hover an image in it. + improve visual of select-image component and behavior to leave it

--- a/src/app/utils/gallery/gallery.component.html
+++ b/src/app/utils/gallery/gallery.component.html
@@ -17,14 +17,12 @@
       [style.width]="container_img_width"
       *ngFor="let artwork of artworks_visible"
       class="container_image"
-      [ngClass]="{ 'hoverElm': isHover, 'actual':artwork.id == artworks_actual.id }"
-      (mouseover)="onOverElement(artwork.id)"
-      (mouseout)="onOutElement()"
-      >
+      mfHover
+      appShadowHover
+    >
       <img
         [src]="artwork.src"
         (click)="onClickElement(artwork.src)"
-        mfHover
         />
     </div>
   </div>
