--- a/src/app/utils/select-image/select-image.component.html
+++ b/src/app/utils/select-image/select-image.component.html
@@ -1,4 +1,5 @@
-<div id="layer-image" (click)="onClickLayer()">
+<div>
+  <div id="layer-image" (click)="onClickLayer()" mfHover></div>
   <div class="content">
     <div class="infos">
       <div class="title">Titre</div>
