--- a/src/app/utils/grid/grid.component.html
+++ b/src/app/utils/grid/grid.component.html
@@ -8,12 +8,12 @@
     'grid-column-end':e.data_grid.column_end,
     'grid-row-start':e.data_grid.row_start,
     'grid-row-end':e.data_grid.row_end
-  }" [ngClass]="{'hoverElm' : isHover }" mfHover>
+  }"
+  mfHover
+  appShadowHover>
     <img
       [src]="e.src"
       class="img"
-      (mouseover)="onOverElement(e.id)"
-      (mouseout)="onOutElement()"
       (click)="onClickElement(e.src)"/>
   </div>
 </div>
