add a home image on artworks home page

--- a/src/app/main/artworks/artworks.component.html
+++ b/src/app/main/artworks/artworks.component.html
@@ -1,4 +1,6 @@
 <div id="artworks_page">
   <app-art-menu></app-art-menu>
+  <div *ngIf="r.url == '/artworks'" id="click_on_category">
+  </div>
   <router-outlet></router-outlet>
 </div>
